Added new parameters for namespaces