@@ -24,7 +24,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 class RoutesValidatorTest {
 
-    private static final RoutesValidator DEFAULT_VALIDATOR = new RoutesValidator(null, false);
+    private static final RoutesValidator DEFAULT_VALIDATOR = new RoutesValidator(null, false, false);
 
     static Stream<Arguments> getParameters() {
         return Stream.of(
@@ -33,6 +33,7 @@ class RoutesValidatorTest {
             Arguments.of(List.of(routeParameter("valid-host.domain"), 
                                  routeParameter("sub.domain.com", true)), 
                          null,
+                         false,
                          false,
                          true,
                          List.of(routeParameter("valid-host.domain"), 
@@ -45,6 +46,7 @@ class RoutesValidatorTest {
                          null,
                          false,
                          false,
+                         false,
                          List.of(routeParameter("foo.domain.com"), 
                                  routeParameter("bar.domain.com", true), 
                                  routeParameter("baz-but-invalid.domain.com")),
@@ -54,11 +56,13 @@ class RoutesValidatorTest {
                          null,
                          false,
                          false, 
+                         false, 
                          List.of(routeParameter("host.domain-can-be-corrected.com")),
                          null),
             // [4] one hostless route; is invalid; can be corrected
             Arguments.of(List.of(routeParameter("sub_domain_can_be_corrected.domain.com", true)),
                          null,
+                         false,
                          false,
                          false, 
                          List.of(routeParameter("sub-domain-can-be-corrected.domain.com", true)),
@@ -67,6 +71,7 @@ class RoutesValidatorTest {
             Arguments.of(List.of(routeParameterWithAdditionalValues("doesnt.matter.com", false, Map.of(NO_HOSTNAME, "not a boolean"))),
                          null,
                          false,
+                         false,
                          false, 
                          null,
                          MessageFormat.format(Messages.COULD_NOT_PARSE_BOOLEAN_FLAG, NO_HOSTNAME)),
@@ -74,6 +79,7 @@ class RoutesValidatorTest {
             Arguments.of(List.of(routeParameter("valid-route.com"), 
                                  routeParameterWithAdditionalValues("another-valid-one.com", false, Map.of("UNSUPPORTED-KEY", 1))),
                          null,
+                         false,
                          false,
                          false, 
                          List.of(routeParameter("valid-route.com"),
@@ -84,50 +90,95 @@ class RoutesValidatorTest {
                                  routeParameter("valid-host-2.domain.com")),
                          "dev",
                          true,
+                         true,
                          false,
                          List.of(routeParameter("dev-valid-host-1.domain.com"),
                                  routeParameter("dev-valid-host-2.domain.com")),
                          null),
-            // [8] two routes where namespace prefix is already applied
+                // [8] two routes where namespace prefix should not be applied
+                Arguments.of(List.of(routeParameter("valid-host-1.domain.com"),
+                                routeParameter("valid-host-2.domain.com")),
+                        "dev",
+                        null,
+                        false,
+                        true,
+                        List.of(routeParameter("valid-host-1.domain.com"),
+                                routeParameter("valid-host-2.domain.com")),
+                        null),
+            // [9] two routes where namespace prefix is already applied
             Arguments.of(List.of(routeParameter("dev-valid-host-1.domain.com"),
                                  routeParameter("dev-valid-host-2.domain.com")),
                          "dev",
                          true,
                          true,
+                         true,
                          List.of(routeParameter("dev-valid-host-1.domain.com"),
                                  routeParameter("dev-valid-host-2.domain.com")),
                          null),
-            // [9] two routes, only one has namespace applied
+                // [10] two routes where namespace prefix is already applied
+                Arguments.of(List.of(routeParameter("dev-valid-host-1.domain.com"),
+                                routeParameter("dev-valid-host-2.domain.com")),
+                        "dev",
+                        true,
+                        false,
+                        true,
+                        List.of(routeParameter("dev-valid-host-1.domain.com"),
+                                routeParameter("dev-valid-host-2.domain.com")),
+                        null),
+            // [11] two routes, only one has namespace applied
             Arguments.of(List.of(routeParameter("valid-host-1.domain.com"),
                                  routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
                          "dev",
+                         null,
                          true,
                          false,
                          List.of(routeParameter("dev-valid-host-1.domain.com"),
                                  routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
                          null),
-            // [10] two routes, only one has namespace applied; correction is already applied
+                // [12] two routes, only one has namespace applied
+                Arguments.of(List.of(routeParameter("valid-host-1.domain.com"),
+                                routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
+                        "dev",
+                        null,
+                        false,
+                        true,
+                        List.of(routeParameter("valid-host-1.domain.com"),
+                                routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
+                        null),
+            // [13] two routes, only one has namespace applied; correction is already applied
             Arguments.of(List.of(routeParameter("dev-valid-host-1.domain.com"),
                                  routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
                          "dev",
+                         null,
                          true,
                          true,
                          List.of(routeParameter("dev-valid-host-1.domain.com"),
                                  routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
                          null),
-            // [11] empty map of routes
-            Arguments.of(Collections.emptyList(), null, false, false, Collections.emptyList(), org.cloudfoundry.multiapps.controller.core.Messages.COULD_NOT_PARSE_ROUTE),
-            // [12] not valid route parameter
-            Arguments.of(List.of("test"), null, false, false, Collections.emptyList(), org.cloudfoundry.multiapps.controller.core.Messages.COULD_NOT_PARSE_ROUTE)
+                // [14] two routes, only one has namespace applied; correction is already applied
+                Arguments.of(List.of(routeParameter("dev-valid-host-1.domain.com"),
+                                routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
+                        "dev",
+                        null,
+                        false,
+                        true,
+                        List.of(routeParameter("dev-valid-host-1.domain.com"),
+                                routeParameterWithAdditionalValues("valid-host-2.domain.com", false, Map.of(SupportedParameters.APPLY_NAMESPACE, false))),
+                        null),
+            // [15] empty map of routes
+            Arguments.of(Collections.emptyList(), null, false, false, false, Collections.emptyList(), org.cloudfoundry.multiapps.controller.core.Messages.COULD_NOT_PARSE_ROUTE),
+            // [16] not valid route parameter
+            Arguments.of(List.of("test"), null, false, false, false, Collections.emptyList(), org.cloudfoundry.multiapps.controller.core.Messages.COULD_NOT_PARSE_ROUTE)
 // @formatter:on
         );
     }
 
     @ParameterizedTest
     @MethodSource("getParameters")
-    void testValidate(List<Map<String, Object>> inputRoutes, String namespace, boolean applyNamespaceGlobal, boolean isValid,
-                      List<Map<String, Object>> expectedCorrectedRoutes, String expectedException) {
-        RoutesValidator validator = new RoutesValidator(namespace, applyNamespaceGlobal);
+    void testValidate(List<Map<String, Object>> inputRoutes, String namespace, Boolean applyNamespaceProcessVariable,
+                      boolean applyNamespaceGlobalLevel, boolean isValid, List<Map<String, Object>> expectedCorrectedRoutes,
+                      String expectedException) {
+        RoutesValidator validator = new RoutesValidator(namespace, applyNamespaceGlobalLevel, applyNamespaceProcessVariable);
         try {
             assertEquals(isValid, validator.isValid(inputRoutes, Collections.emptyMap()));
         } catch (Exception e) {
@@ -139,9 +190,10 @@ class RoutesValidatorTest {
     @SuppressWarnings("unchecked")
     @ParameterizedTest
     @MethodSource("getParameters")
-    void testAttemptToCorrect(List<Map<String, Object>> inputRoutes, String namespace, boolean applyNamespaceGlobal, boolean isValid,
-                              List<Map<String, Object>> expectedCorrectedRoutes, String expectedException) {
-        RoutesValidator validator = new RoutesValidator(namespace, applyNamespaceGlobal);
+    void testAttemptToCorrect(List<Map<String, Object>> inputRoutes, String namespace, Boolean applyNamespaceProcessVariable,
+                              boolean applyNamespaceGlobalLevel, boolean isValid, List<Map<String, Object>> expectedCorrectedRoutes,
+                              String expectedException) {
+        RoutesValidator validator = new RoutesValidator(namespace, applyNamespaceGlobalLevel, applyNamespaceProcessVariable);
         try {
             List<Map<String, Object>> correctedRoutes = (List<Map<String, Object>>) validator.attemptToCorrect(inputRoutes,
                                                                                                                Collections.emptyMap());
@@ -190,7 +242,7 @@ class RoutesValidatorTest {
     @ParameterizedTest
     @MethodSource
     void testOverrideRoutesContext(Map<String, Object> parentContext, Map<String, Object> inputRoute, Map<String, Object> expectedRoute) {
-        RoutesValidator validator = new RoutesValidator("dev", true);
+        RoutesValidator validator = new RoutesValidator("dev", true, null);
         List<Map<String, Object>> result = (List<Map<String, Object>>) validator.attemptToCorrect(List.of(inputRoute), parentContext);
         assertEquals(expectedRoute, result.get(0));
     }
